tera/src/snapshot_tests/snapshots/tera__snapshot_tests__rendering__rendering_errors@compare_undefined_with_int.txt.snap
---
source: tera/src/snapshot_tests/rendering.rs
expression: "&err"
input_file: tera/src/snapshot_tests/rendering_inputs/errors/compare_undefined_with_int.txt
---
error: Cannot compare `undefined` with `i64`
 --> compare_undefined_with_int.txt:1:3
  |
1 | {{ not_in_context < 1 }}
  |    ^^^^^^^^^^^^^^^^^^
